Im change color

--- a/test.html
+++ b/test.html
@@ -1,4 +1,10 @@
 <h1>My first test commit</h1>
+<style>
+h1 {
+    background-color: rgba(175, 121, 224, 0.438);
+    color: rgba(37, 16, 20, 0.801);
+}
+</style>
 <p>My second commit</p>
 <p>Third</p>
 
